hard-gists/c7a2333c227e24226808/run.log
=== Docker Run Log for c7a2333c227e24226808 ===
Started at: Mi 29. Okt 19:56:21 CET 2025

[2025-10-29 19:56:21] START: Running container for c7a2333c227e24226808
[2025-10-29 19:56:22] SUCCESS: Container 8d54be2e9e542fc0dee2785ae37e24a6acf5d028c1ca83519ab6636fae0cd5b6 started for c7a2333c227e24226808
=== Container logs for c7a2333c227e24226808 ===
  File "/snippet.py", line 36
    print "delta_pos = " + str(delta_pos)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c7a2333c227e24226808 ===
[2025-10-29 19:56:24] INFO: Container 8d54be2e9e542fc0dee2785ae37e24a6acf5d028c1ca83519ab6636fae0cd5b6 has stopped
